# vectorizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py  out.txt
cmake/: ExternalProjectOpenCV.cmake
